--- a/css/style.css
+++ b/css/style.css
@@ -8,48 +8,59 @@ body{
 div.div_logo{
 	border: 1px solid black;
 	background-color: #222528;
-	height: 400px;
+	height: 300px;
 }
 
-div.container{
-	/*box-shadow: 0px 0px 10px rgba(0,0,0,.5);*/
-	border: 5px solid grey;
-	/*padding: 10px;*/
-	margin: 5px;
-	width: 320px;
-	display: inline-block;
-	position: relative;
-	background-color: grey;
-
+div#streamers{
+	display: none;
 }
 
-div.corpo{
+div#corpo{
 	display: grid;
 	grid-template-areas: "div div div";
 	position: relative;
 	padding-left: 100px;
+	padding-right: 100px;
 }
+
+div.container{
+	/*box-shadow: 0px 0px 10px rgba(0,0,0,.5);*/
+	/*border: 5px solid grey;
+	/*padding: 10px;*/
+
+	/*margin: 5px;
+	width: 350px;
+	display: block;
+	position: relative;
+	background-color: grey;*/
+
+}
+
 img{
 	position: relative;
 	left: 100px;
 }
 
+img.icone{
+	top: 5px;
+}
+
 img#logo{
 	position: relative;
 	left: 300px;
-	top: -40px;
+	top: -100px;
 }
 img#linkopgg{
 	position: relative;
 	left: 20px;
 	top: -15px;
-	display:inline-block;
+	display:inline;
 }
 
 img#twitch_icon{
 	position: relative;
 	left: 5px;
-	top: -22px;
+	top: -20px;
 	display:inline;
 }
 
